Replace legacy runner by wanda (#58)
* Remove legacy runner chart

* Add ampq url variable to web chart

* Rename wanda by trento-wanda

* Set new env variables and secrets

* Move postgresql auth values to global

* Add provision wanda db job

* Use postgres global auth values in configmaps

* Chore: uniform file naming

* Add /api/checks to ingress

* Expose RabbitMQ

* Share JWT token

---------

Co-authored-by: arbulu89 <xarbulu@suse.com>

--- a/charts/trento-server/charts/trento-wanda/Chart.yaml
+++ b/charts/trento-server/charts/trento-wanda/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: trento-runner
-description: Trento Runner Chart
+name: trento-wanda
+description: Trento Wanda chart
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,4 +15,4 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.1.0
+version: 0.1.0-dev1
