--- a/charts/trento-server/charts/trento-wanda/templates/serviceaccount.yaml
+++ b/charts/trento-server/charts/trento-wanda/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "trento-runner.serviceAccountName" . }}
+  name: {{ include "trento-wanda.serviceAccountName" . }}
   labels:
-    {{- include "trento-runner.labels" . | nindent 4 }}
+    {{- include "trento-wanda.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
