--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -1,22 +1,24 @@
-# Default values for trento-runner.
+# Default values for wanda.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 global:
-  logLevel: info
-  trentoWeb:
-    name: web
-    servicePort: 8080
-
-privateKey: ""
-checkIntervalMins: 5
+  trentoWanda:
+    servicePort: ""
+  rabbitmq:
+    name: rabbitmq
+    servicePort: 5672
+  postgresql:
+    name: postgresql
+    servicePort: 5432
 
 replicaCount: 1
 
 image:
-  repository: ghcr.io/trento-project/trento-runner
-  pullPolicy: IfNotPresent
-  tag: 1.1.0
+  repository: ghcr.io/trento-project/trento-wanda
+  #pullPolicy: IfNotPresent
+  pullPolicy: Always
+  tag: rolling
 
 imagePullSecrets: []
 nameOverride: ""
@@ -51,16 +53,15 @@ service:
   port: 4000
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
   annotations:
-    {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "traefik"
+    kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: ""
       paths:
-        - path: /
+        - path: /api/checks
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
