Add ttl to provisioning wanda database job

--- a/charts/trento-server/templates/provision-wanda-database-job.yaml
+++ b/charts/trento-server/templates/provision-wanda-database-job.yaml
@@ -3,6 +3,7 @@ kind: Job
 metadata:
   name: "{{ .Release.Name }}-provision-wanda-database-job"
 spec:
+  ttlSecondsAfterFinished: 100
   template:
     spec:
       containers:
