Add ttl time to auto delete the job

--- a/charts/trento-server/templates/provision-database-permissions-job.yaml
+++ b/charts/trento-server/templates/provision-database-permissions-job.yaml
@@ -3,6 +3,7 @@ kind: Job
 metadata:
   name: "{{ .Release.Name }}-provision-database-permissions-job"
 spec:
+  ttlSecondsAfterFinished: 100
   template:
     spec:
       volumes:
