Update package installation related files to use wanda

--- a/packaging/suse/config/installer.conf
+++ b/packaging/suse/config/installer.conf
@@ -1,6 +1,6 @@
 TRENTO_CHART_PATH="oci://registry.suse.com/trento/trento-server"
 TRENTO_WEB_IMAGE="registry.suse.com/trento/trento-web"
-TRENTO_RUNNER_IMAGE="registry.suse.com/trento/trento-runner"
+TRENTO_WANDA_IMAGE="registry.suse.com/trento/trento-wanda"
 TRENTO_ROLLING_VERSION="latest"
 ROLLING=false
 DOWNLOAD_CHART=false
