Add a temporary fix to wanda ingress path value to use versioning

--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -63,6 +63,8 @@ ingress:
       paths:
         - path: /api/checks
           pathType: ImplementationSpecific
+        - path: /api/v1/checks
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
