Fix shared access token key usage

--- a/charts/trento-server/charts/trento-wanda/templates/deployment.yaml
+++ b/charts/trento-server/charts/trento-wanda/templates/deployment.yaml
@@ -36,6 +36,8 @@ spec:
                 name: {{ include "trento-wanda.fullname" . }}-configmap
             - secretRef:
                 name: {{ include "trento-wanda.fullname" . }}-secret
+            - secretRef:
+                name: {{ .Release.Name }}-auth-tokens-secret
           args: ['eval', 'Wanda.Release.init()']
       containers:
         - name: {{ .Chart.Name }}
