--- a/charts/trento-server/charts/trento-web/templates/grafana-secret.yaml
+++ b/charts/trento-server/charts/trento-web/templates/grafana-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: trento-server-grafana-secret
+  name: {{ .Release.Name }}-grafana-secret
 type: Opaque
 data:
   admin-user: {{ "admin" | b64enc | quote }}
