Update version to 2.0.0

--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -19,9 +19,8 @@ replicaCount: 1
 
 image:
   repository: ghcr.io/trento-project/trento-wanda
-  #pullPolicy: IfNotPresent
-  pullPolicy: Always
-  tag: rolling
+  pullPolicy: IfNotPresent
+  tag: 1.0.0
 
 imagePullSecrets: []
 nameOverride: ""
