--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -148,12 +148,15 @@ jobs:
           osc ar
           osc commit -m "GitHub Actions automated update to reference ${{ github.sha }}"
 
-  obs-commit-installer-and-plugin:
+  obs-commit-scripts:
     needs: [test-helm-charts]
     runs-on: ubuntu-20.04
     if: github.ref == 'refs/heads/main' || github.event_name == 'release'
     container:
       image: ghcr.io/trento-project/continuous-delivery:main
+      env:
+        DEST_FOLDER: "/tmp/osc_project"
+        FOLDER: packaging/suse
       options: -u 0:0
     strategy:
       matrix:
@@ -169,31 +172,34 @@ jobs:
           semver_only: true
           initial_version: 0.0.1
       - name: Configure OSC
-        # OSC credentials must be configured beforehand as the HOME variables cannot be changed from /github/home
-        # that is used to run osc commands
         run: |
           mkdir -p $HOME/.config/osc
           cp /home/osc/.config/osc/oscrc $HOME/.config/osc
           /scripts/init_osc_creds.sh
-      - name: Prepare .changes file and prepare OBS package
-        run: |
-          CHANGES_FILE=${{ matrix.packages }}.changes
-          FOLDER=packaging/suse/${{ matrix.packages }}
-          osc checkout $OBS_PROJECT ${{ matrix.packages }} $CHANGES_FILE
-          osc service manualrun
-          mv $CHANGES_FILE $FOLDER
-          TAG=${{ steps.latest-tag.outputs.tag }}
-          hack/gh_release_to_obs_changeset.py ${{ github.repository }} -a shap-staff@suse.de -t $TAG -f $FOLDER/$CHANGES_FILE
-      - name: prepare _service file
+      - name: Prepare _service file with version details
         run: |
           git config --global --add safe.directory /__w/helm-charts/helm-charts
-          # Using get_version_from_git script as it creates a more meaningful version string (tag+sha) which is interesting
-          # only for rpm packages
           VERSION=$(./hack/get_version_from_git.sh)
-          sed -i 's~%%REVISION%%~${{ github.sha }}~' $FOLDER/_service && \
-          sed -i 's~%%VERSION%%~'"${VERSION}"'~' $FOLDER/_service
+          PACKAGE_FOLDER=$FOLDER/${{ matrix.packages }}
+          sed -i 's~%%REVISION%%~${{ github.sha }}~' $PACKAGE_FOLDER/_service && \
+          sed -i 's~%%VERSION%%~'"${VERSION}"'~' $PACKAGE_FOLDER/_service
+      - name: Prepare OBS package
+        run: |
+          PACKAGE_FOLDER=$FOLDER/${{ matrix.packages }}
+          osc checkout $OBS_PROJECT ${{ matrix.packages }} $DEST_FOLDER
+          cp $PACKAGE_FOLDER/_service $DEST_FOLDER
+          cp $PACKAGE_FOLDER/${{ matrix.packages }}.spec $DEST_FOLDER
+          rm $DEST_FOLDER/*.tar.gz
+          pushd $DEST_FOLDER
+          osc service manualrun
+      - name: Prepare .changes file
+        if: github.event_name == 'release'
+        run: |
+          CHANGES_FILE=${{ matrix.packages }}.changes
+          TAG=${{ steps.latest-tag.outputs.tag }}
+          hack/gh_release_to_obs_changeset.py ${{ github.repository }} -a shap-staff@suse.de -t $TAG -f $DEST_FOLDER/$CHANGES_FILE
       - name: Commit on OBS
         run: |
-          pushd $OSC_CHECKOUT_DIR
+          pushd $DEST_FOLDER
           osc ar
           osc commit -m "GitHub Actions automated update to reference ${{ github.sha }}"
