--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -148,16 +148,19 @@ jobs:
           osc ar
           osc commit -m "GitHub Actions automated update to reference ${{ github.sha }}"
 
-  obs-commit-installer:
+  obs-commit-scripts:
     needs: [test-helm-charts]
     runs-on: ubuntu-20.04
     if: github.ref == 'refs/heads/main' || github.event_name == 'release'
     container:
       image: ghcr.io/trento-project/continuous-delivery:main
       env:
-        PACKAGE_NAME: trento-server-installer
-        FOLDER: packaging/suse/trento-server-installer
+        DEST_FOLDER: "/tmp/osc_project"
+        FOLDER: packaging/suse
       options: -u 0:0
+    strategy:
+      matrix:
+        packages: ["trento-server-installer", "trento-supportconfig-plugin"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -169,77 +172,34 @@ jobs:
           semver_only: true
           initial_version: 0.0.1
       - name: Configure OSC
-        # OSC credentials must be configured beforehand as the HOME variables cannot be changed from /github/home
-        # that is used to run osc commands
         run: |
           mkdir -p $HOME/.config/osc
           cp /home/osc/.config/osc/oscrc $HOME/.config/osc
           /scripts/init_osc_creds.sh
-      - name: Prepare .changes file
-        # The .changes file is updated only in release creation. This current task should be improved
-        # in order to add the current rolling release notes
-        if: github.event_name == 'release'
-        run: |
-          CHANGES_FILE=$PACKAGE_NAME.changes
-          osc checkout $OBS_PROJECT $PACKAGE_NAME $CHANGES_FILE
-          mv $CHANGES_FILE $FOLDER
-          TAG=${{ steps.latest-tag.outputs.tag }}
-          hack/gh_release_to_obs_changeset.py ${{ github.repository }} -a shap-staff@suse.de -t $TAG -f $FOLDER/$CHANGES_FILE
-      - name: prepare _service file
+      - name: Prepare _service file with version details
         run: |
           git config --global --add safe.directory /__w/helm-charts/helm-charts
-          # Using get_version_from_git script as it creates a more meaningful version string (tag+sha) which is interesting
-          # only for rpm packages
           VERSION=$(./hack/get_version_from_git.sh)
-          sed -i 's~%%REVISION%%~${{ github.sha }}~' $FOLDER/_service && \
-          sed -i 's~%%VERSION%%~'"${VERSION}"'~' $FOLDER/_service
-      - name: Commit on OBS
-        run: /scripts/upload.sh
-
-  obs-commit-plugin:
-    needs: [test-helm-charts]
-    runs-on: ubuntu-20.04
-    if: github.ref == 'refs/heads/main' || github.event_name == 'release'
-    container:
-      image: ghcr.io/trento-project/continuous-delivery:main
-      env:
-        PACKAGE_NAME: trento-supportconfig-plugin
-        FOLDER: packaging/suse/trento-supportconfig-plugin
-      options: -u 0:0
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: actions-ecosystem/action-get-latest-tag@v1
-        id: latest-tag
-        with:
-          semver_only: true
-          initial_version: 0.0.1
-      - name: Configure OSC
-        # OSC credentials must be configured beforehand as the HOME variables cannot be changed from /github/home
-        # that is used to run osc commands
+          PACKAGE_FOLDER=$FOLDER/${{ matrix.packages }}
+          sed -i 's~%%REVISION%%~${{ github.sha }}~' $PACKAGE_FOLDER/_service && \
+          sed -i 's~%%VERSION%%~'"${VERSION}"'~' $PACKAGE_FOLDER/_service
+      - name: Prepare OBS package
         run: |
-          mkdir -p $HOME/.config/osc
-          cp /home/osc/.config/osc/oscrc $HOME/.config/osc
-          /scripts/init_osc_creds.sh
+          PACKAGE_FOLDER=$FOLDER/${{ matrix.packages }}
+          osc checkout $OBS_PROJECT ${{ matrix.packages }} -o $DEST_FOLDER
+          cp $PACKAGE_FOLDER/_service $DEST_FOLDER
+          cp $PACKAGE_FOLDER/${{ matrix.packages }}.spec $DEST_FOLDER
+          rm $DEST_FOLDER/*.tar.gz
+          pushd $DEST_FOLDER
+          osc service manualrun
       - name: Prepare .changes file
-        # The .changes file is updated only in release creation. This current task should be improved
-        # in order to add the current rolling release notes
         if: github.event_name == 'release'
         run: |
-          CHANGES_FILE=$PACKAGE_NAME.changes
-          osc checkout $OBS_PROJECT $PACKAGE_NAME $CHANGES_FILE
-          mv $CHANGES_FILE $FOLDER
+          CHANGES_FILE=${{ matrix.packages }}.changes
           TAG=${{ steps.latest-tag.outputs.tag }}
-          hack/gh_release_to_obs_changeset.py ${{ github.repository }} -a shap-staff@suse.de -t $TAG -f $FOLDER/$CHANGES_FILE
-      - name: prepare _service file
-        run: |
-          git config --global --add safe.directory /__w/helm-charts/helm-charts
-          # Using get_version_from_git script as it creates a more meaningful version string (tag+sha) which is interesting
-          # only for rpm packages
-          VERSION=$(./hack/get_version_from_git.sh)
-          sed -i 's~%%REVISION%%~${{ github.sha }}~' $FOLDER/_service && \
-          sed -i 's~%%VERSION%%~'"${VERSION}"'~' $FOLDER/_service
+          hack/gh_release_to_obs_changeset.py ${{ github.repository }} -a shap-staff@suse.de -t $TAG -f $DEST_FOLDER/$CHANGES_FILE
       - name: Commit on OBS
-        run: /scripts/upload.sh
+        run: |
+          pushd $DEST_FOLDER
+          osc ar
+          osc commit -m "GitHub Actions automated update to reference ${{ github.sha }}"
