--- a/charts/trento-server/Chart.yaml
+++ b/charts/trento-server/Chart.yaml
@@ -1,13 +1,13 @@
 # SPDX-License-Identifier: Apache-2.0
-#!BuildTag: trento/trento-server:2.1.0
-#!BuildTag: trento/trento-server:2.1.0-build%RELEASE%
+#!BuildTag: trento/trento-server:2.2.0
+#!BuildTag: trento/trento-server:2.2.0-build%RELEASE%
 apiVersion: v2
 name: trento-server
 description: The trento server chart contains all the components necessary to run a Trento server.
 type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates
-version: 2.1.1-dev2
+version: 2.2.0
 
 dependencies:
   - name: trento-web
