Add wanda v2 apis in ingress

--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -67,6 +67,8 @@ ingress:
           pathType: ImplementationSpecific
         - path: /api/v1/checks
           pathType: ImplementationSpecific
+        - path: /api/v2/checks
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
