Add option to disable charts

--- a/charts/trento-server/charts/trento-web/templates/configmap.yaml
+++ b/charts/trento-server/charts/trento-web/templates/configmap.yaml
@@ -14,3 +14,4 @@ data:
   ALERT_RECIPIENT: "{{ .Values.alerting.recipient }}"
   PROMETHEUS_URL: "http://{{ .Release.Name }}-{{ .Values.global.prometheus.name }}"
   AMQP_URL: "amqp://trento:trento@{{ .Release.Name }}-{{ .Values.global.rabbitmq.name }}:{{ .Values.global.rabbitmq.servicePort }}"
+  CHARTS_ENABLED: "{{ .Values.chartsEnabled }}"
