--- a/charts/trento-server/values.yaml
+++ b/charts/trento-server/values.yaml
@@ -31,6 +31,11 @@ trento-web:
 trento-wanda:
   nameOverride: wanda
   enabled: true
+  postgresql:
+    image:
+      tag: 14.1.0-debian-10-r30
+      registry: docker.io
+      repository: bitnami/postgresql
 
 postgresql:
   enabled: true
