--- a/packaging/suse/trento-server/values-overwrite.yaml
+++ b/packaging/suse/trento-server/values-overwrite.yaml
@@ -10,6 +10,11 @@ trento-web:
 trento-wanda:
   image:
     repository: registry.suse.com/trento/trento-wanda
+  postgresql:
+    image:
+      registry: registry.suse.com
+      repository: trento/trento-db
+      tag: latest
 
 postgresql:
   image:
