--- a/charts/trento-server/values.yaml
+++ b/charts/trento-server/values.yaml
@@ -24,23 +24,32 @@ trento-web:
   enabled: true
   postgresql:
     image:
-      tag: 14.1.0-debian-10-r30
-      registry: docker.io
-      repository: bitnami/postgresql
+      registry: registry.suse.com
+      repository: suse/postgres
+      tag: "14"
 
 trento-wanda:
   nameOverride: wanda
   enabled: true
   postgresql:
     image:
-      tag: 14.1.0-debian-10-r30
-      registry: docker.io
-      repository: bitnami/postgresql
+      registry: registry.suse.com
+      repository: suse/postgres
+      tag: "14"
 
 postgresql:
   enabled: true
   image:
-    tag: 14.1.0-debian-10-r30
+    registry: registry.suse.com
+    repository: suse/postgres
+    tag: "14"
+  persistence:
+    mountPath: /var/lib/postgresql/data
+  postgresqlDataDir: /var/lib/postgresql/data/trento
+  securityContext:
+    fsGroup: 0
+  containerSecurityContext:
+    runAsUser: 0
 
 prometheus:
   enabled: true
