--- a/charts/trento-server/values.yaml
+++ b/charts/trento-server/values.yaml
@@ -22,19 +22,34 @@ global:
 trento-web:
   nameOverride: web
   enabled: true
+  postgresql:
+    image:
+      registry: registry.suse.com
+      repository: suse/postgres
+      tag: "14"
 
 trento-wanda:
   nameOverride: wanda
   enabled: true
+  postgresql:
+    image:
+      registry: registry.suse.com
+      repository: suse/postgres
+      tag: "14"
 
 postgresql:
   enabled: true
   image:
-    tag: 14.1.0-debian-10-r30
-  postgresqlDatabase: "trento"
-  initdbScripts:
-    init.sql: |
-      CREATE DATABASE trento_event_store;
+    registry: registry.suse.com
+    repository: suse/postgres
+    tag: "14"
+  persistence:
+    mountPath: /var/lib/postgresql/data
+  postgresqlDataDir: /var/lib/postgresql/data/trento
+  securityContext:
+    fsGroup: 0
+  containerSecurityContext:
+    runAsUser: 0
 
 prometheus:
   enabled: true
