Add v3 checks path to the ingress configuration

--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -69,6 +69,8 @@ ingress:
           pathType: ImplementationSpecific
         - path: /api/v2/checks
           pathType: ImplementationSpecific
+        - path: /api/v3/checks
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
