--- a/hack/cert-manager/certificate.yaml
+++ b/hack/cert-manager/certificate.yaml
@@ -2,13 +2,14 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: trento-certificate
-  namespace: default
+  namespace: default # Adjust this with the namespace that you want to have the trento-server chart installed on
+
 spec:
   secretName: trento-tls
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  # Adjust both with the FQDN you intend to use for your deployment
-  commonName: demo.trento-project.io
+
+  commonName: demo.trento-project.io # Adjust with the FQDN you intend to use for your deployment
   dnsNames:
-  - demo.trento-project.io
+  - demo.trento-project.io # Same here
