Add OIDC variables

--- a/charts/trento-server/charts/trento-web/templates/secret.yaml
+++ b/charts/trento-server/charts/trento-web/templates/secret.yaml
@@ -8,3 +8,4 @@ data:
   SMTP_PASSWORD: {{ .Values.alerting.smtpPassword | b64enc | quote }}
   ADMIN_USER: {{ .Values.adminUser.username | b64enc | quote}}
   ADMIN_PASSWORD: {{- if .Values.adminUser.password }} {{ .Values.adminUser.password | b64enc | quote }}{{- else }} {{ include "trento.web.adminPassword" . | quote }}{{- end}}
+  OIDC_CLIENT_SECRET: {{ .Values.oidc.clientSecret | b64enc | quote }}
