--- a/charts/trento-server/charts/trento-web/values.yaml
+++ b/charts/trento-server/charts/trento-web/values.yaml
@@ -25,6 +25,12 @@ adminUser:
   username: "admin"
   password: ""
 
+oidc:
+  enabled: false
+  clientId: ""
+  clientSecret: ""
+  baseUrl: ""
+
 chartsEnabled: true
 
 replicaCount: 1
