--- a/charts/trento-server/charts/trento-web/templates/configmap.yaml
+++ b/charts/trento-server/charts/trento-web/templates/configmap.yaml
@@ -9,10 +9,12 @@ data:
   SMTP_SERVER: "{{ .Values.alerting.smtpServer }}"
   SMTP_PORT: "{{ .Values.alerting.smtpPort }}"
   SMTP_USER: "{{ .Values.alerting.smtpUser }}"
-  SMTP_PASSWORD: "{{ .Values.alerting.smtpPassword }}"
   ALERT_SENDER: "{{ .Values.alerting.sender }}"
   ALERT_RECIPIENT: "{{ .Values.alerting.recipient }}"
   PROMETHEUS_URL: "http://{{ .Release.Name }}-{{ .Values.global.prometheus.name }}"
   AMQP_URL: "amqp://trento:trento@{{ .Release.Name }}-{{ .Values.global.rabbitmq.name }}:{{ .Values.global.rabbitmq.servicePort }}"
   CHARTS_ENABLED: "{{ .Values.chartsEnabled }}"
   TRENTO_WEB_ORIGIN: "{{ .Values.trentoWebOrigin }}"
+  ENABLE_OIDC: "{{ .Values.oidc.enabled }}"
+  OIDC_CLIENT_ID: "{{ .Values.oidc.clientId }}"
+  OIDC_BASE_URL: "{{ .Values.oidc.baseUrl }}"
