Add OAUTH2 authentication support

--- a/charts/trento-server/charts/trento-web/templates/configmap.yaml
+++ b/charts/trento-server/charts/trento-web/templates/configmap.yaml
@@ -18,3 +18,10 @@ data:
   ENABLE_OIDC: "{{ .Values.oidc.enabled }}"
   OIDC_CLIENT_ID: "{{ .Values.oidc.clientId }}"
   OIDC_BASE_URL: "{{ .Values.oidc.baseUrl }}"
+  ENABLE_OAUTH2: "{{ .Values.oauth2.enabled }}"
+  OAUTH2_CLIENT_ID: "{{ .Values.oauth2.clientId }}"
+  OAUTH2_BASE_URL: "{{ .Values.oauth2.baseUrl }}"
+  OAUTH2_AUTHORIZE_URL: "{{ .Values.oauth2.authorizeUrl }}"
+  OAUTH2_TOKEN_URL: "{{ .Values.oauth2.tokenUrl }}"
+  OAUTH2_USER_URL: "{{ .Values.oauth2.userUrl }}"
+  OAUTH2_SCOPES: "{{ .Values.oauth2.scopes }}"
