--- a/charts/trento-server/charts/trento-web/templates/secret.yaml
+++ b/charts/trento-server/charts/trento-web/templates/secret.yaml
@@ -9,3 +9,4 @@ data:
   ADMIN_USER: {{ .Values.adminUser.username | b64enc | quote}}
   ADMIN_PASSWORD: {{- if .Values.adminUser.password }} {{ .Values.adminUser.password | b64enc | quote }}{{- else }} {{ include "trento.web.adminPassword" . | quote }}{{- end}}
   OIDC_CLIENT_SECRET: {{ .Values.oidc.clientSecret | b64enc | quote }}
+  OAUTH2_CLIENT_SECRET: {{ .Values.oauth2.clientSecret | b64enc | quote }}
