Remove spaces from scopes

--- a/charts/trento-server/charts/trento-web/values.yaml
+++ b/charts/trento-server/charts/trento-web/values.yaml
@@ -39,7 +39,7 @@ oauth2:
   authorizeUrl: ""
   tokenUrl: ""
   userUrl: ""
-  scopes: "profile,email"
+  scopes: "profile email"
 
 chartsEnabled: true
 
