Add missing value

--- a/charts/trento-server/charts/trento-web/values.yaml
+++ b/charts/trento-server/charts/trento-web/values.yaml
@@ -58,6 +58,7 @@ saml:
   firstNameAttrName: "firstName"
   lastNameAttrName: "lastName"
   metadataUrl: ""
+  metadataContent: ""
   signRequests: true
   signMetadata: true
   signedAssertion: true
