don't commit to support package anymore

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -159,7 +159,7 @@ jobs:
       options: -u 0:0
     strategy:
       matrix:
-        packages: ["trento-server-installer", "trento-supportconfig-plugin"]
+        packages: ["trento-server-installer"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
