Update values-overwrite.yaml to allow picking checks image from SUSE's registry

--- a/packaging/suse/trento-server/values-overwrite.yaml
+++ b/packaging/suse/trento-server/values-overwrite.yaml
@@ -5,3 +5,7 @@ trento-web:
 trento-wanda:
   image:
     repository: registry.suse.com/trento/trento-wanda
+  checks:
+    image:
+      registry: registry.suse.com
+      repository: trento/trento-checks
