Update values-overwrite.yaml (#111)
* Update values-overwrite.yaml to allow picking checks image from SUSE's
registry

* Strip registry value off and include it into the repository

--- a/packaging/suse/trento-server/values-overwrite.yaml
+++ b/packaging/suse/trento-server/values-overwrite.yaml
@@ -5,3 +5,6 @@ trento-web:
 trento-wanda:
   image:
     repository: registry.suse.com/trento/trento-wanda
+  checks:
+    image:
+      repository: registry.suse.com/trento/trento-checks
