Make secret key base configurable

--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -22,6 +22,7 @@ image:
   pullPolicy: IfNotPresent
   tag: 1.3.0
 
+secretKeyBase: ""
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
