--- a/charts/trento-server/charts/trento-web/values.yaml
+++ b/charts/trento-server/charts/trento-web/values.yaml
@@ -73,6 +73,7 @@ image:
   pullPolicy: IfNotPresent
   tag: 2.3.2
 
+secretKeyBase: ""
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
