Fix typo in variable usage

--- a/charts/trento-server/charts/trento-web/templates/configmap.yaml
+++ b/charts/trento-server/charts/trento-web/templates/configmap.yaml
@@ -31,9 +31,9 @@ data:
   SAML_SP_DIR: "{{ .Values.saml.spDir }}"
   SAML_SP_ID: "{{ .Values.saml.spId }}"
   SAML_SP_ENTITY_ID: "{{ .Values.saml.spEntityId }}"
-  SAML_SP_CONTACT_NAME: "{{ .Values.saml.spContanctName }}"
+  SAML_SP_CONTACT_NAME: "{{ .Values.saml.spContactName }}"
   SAML_SP_CONTACT_EMAIL: "{{ .Values.saml.spContactEmail }}"
-  SAML_SP_ORG_NAME: "{{ .Values.saml.a }}"
+  SAML_SP_ORG_NAME: "{{ .Values.saml.spOrgName }}"
   SAML_SP_ORG_DISPLAYNAME: "{{ .Values.saml.spOrgDisplayName }}"
   SAML_SP_ORG_URL: "{{ .Values.saml.spOrgUrl }}"
   SAML_USERNAME_ATTR_NAME: "{{ .Values.saml.usernameAttrName }}"
