move unused values override in the respective subcharts

--- a/charts/trento-server/charts/trento-web/values.yaml
+++ b/charts/trento-server/charts/trento-web/values.yaml
@@ -73,6 +73,12 @@ image:
   pullPolicy: IfNotPresent
   tag: 2.4.0
 
+postgresql:
+  image:
+    registry: registry.suse.com
+    repository: suse/postgres
+    tag: "14"
+
 secretKeyBase: ""
 imagePullSecrets: []
 nameOverride: ""
