--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -20,7 +20,19 @@ replicaCount: 1
 image:
   repository: ghcr.io/trento-project/trento-wanda
   pullPolicy: IfNotPresent
-  tag: 1.3.0
+  tag: 1.4.0
+
+postgresql:
+  image:
+    registry: registry.suse.com
+    repository: suse/postgres
+    tag: "14"
+
+checks:
+  image:
+    repository: ghcr.io/trento-project/checks
+    pullPolicy: IfNotPresent
+    tag: 1.0.0
 
 secretKeyBase: ""
 imagePullSecrets: []
