--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -84,6 +84,8 @@ ingress:
           pathType: ImplementationSpecific
         - path: /api/v3/checks
           pathType: ImplementationSpecific
+        - path: /api/groups
+          pathType: ImplementationSpecific
         - path: /api/v1/groups
           pathType: ImplementationSpecific
   tls: []
