Add operations endpoint ingress rule

--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -88,6 +88,10 @@ ingress:
           pathType: ImplementationSpecific
         - path: /api/v1/groups
           pathType: ImplementationSpecific
+        - path: /api/operations
+          pathType: ImplementationSpecific
+        - path: /api/v1/operations
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
