--- a/charts/trento-server/values.yaml
+++ b/charts/trento-server/values.yaml
@@ -16,9 +16,9 @@ global:
     name: prometheus-server
   rabbitmq:
     name: rabbitmq
-    servicePort: 5671
+    servicePort: 5672
     mtls:
-      enabled: true
+      enabled: false
       existingCASecret: "rabbitmq-ca"
       existingServerSecret: "rabbitmq-server-tls"
 
@@ -79,6 +79,7 @@ rabbitmq:
   extraConfiguration: |
     {{- if .Values.global.rabbitmq.mtls.enabled }}
     listeners.ssl.default = {{ .Values.global.rabbitmq.servicePort }}
+    listeners.tcp = none
     ssl_options.cacertfile = /opt/bitnami/rabbitmq/certs/ca_certificate.pem
     ssl_options.certfile = /opt/bitnami/rabbitmq/certs/server_certificate.pem
     ssl_options.keyfile = /opt/bitnami/rabbitmq/certs/server_key.pem
